<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:padding="24dp"
    tools:context=".SplashActivity">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/img_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/app_logo" />

    <!-- App Title -->
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_explorer"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_better_way_to_move_forward"
        android:textColor="#DDFFFFFF"
        android:textSize="16sp"
        android:layout_below="@id/tvAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp" />

    <!-- Continue Arrow Button -->
    <ImageView
        android:id="@+id/btnToLogin"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/arrow"
        android:src="@drawable/ic_arrow"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:clickable="true"
        android:focusable="true" />

</RelativeLayout>
